# litreview-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/litreview/: __init__.py  citations.py  cli.py  extract.py  filter.py  link_clean.py  link_enrich.py  must_include.py  search.py  synthesize.py  urls.py
src/litreview/agents/: litreview-builder.md
src/litreview/examples/: example-config.yaml
